--- a/WebApp/client/src/components/HomeComponents/contact/contact.css
+++ b/WebApp/client/src/components/HomeComponents/contact/contact.css
@@ -9,39 +9,23 @@ footer-container {
   min-height: 100vh;
   overflow-x: hidden;
   width: 100vw;
+  
 }
 
 .container1 {
   flex: 1;
   width: 100vw;
 }
-
-a {
-  color: rgb(231, 231, 231);
-  text-decoration: none;
+.newsletter{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  background-color: #007bff;
+  color: aliceblue;
+  border-radius: 2rem;
 }
 
-li {
-  list-style: none;
-}
 
-input {
-  position: relative;
-  height: 100%;
-}
-
-input[type="email"] {
-  padding: 7px 8px;
-  border: 1px solid rgb(206, 206, 206);
-}
-input[type="button"] {
-  border: none;
-  padding: 7px 12px;
-  background: rgb(79, 223, 79);
-  color: rgb(255, 255, 255);
-  border: 1px solid rgb(79, 223, 79);
-  cursor: pointer;
-}
 
 main {
   flex: 1;
@@ -49,8 +33,8 @@ main {
 
 footer {
   bottom: 0;
-  background: #007bff;
-  color: white;
+  background: white;
+  color: #007bff;
   width: 100vw;
   max-width: 100vw;
   overflow-x: hidden;
@@ -64,6 +48,7 @@ footer .info {
   align-items: center;
   justify-content: space-between;
   background: rgb(29, 29, 29);
+  padding-right: 10px;
 }
 
 footer .info .legal {
@@ -107,14 +92,48 @@ footer .social:before {
 footer .top {
   padding: 2rem 0;
   display: flex;
-  align-items: center;
   justify-content: space-evenly;
   flex-direction: row;
+  
 }
+
+.contact-form {
+  display: flex;
+  flex-direction: column;
+  margin: auto;
+}
+
+.contact-form label {
+  margin-bottom: 10px;
+  
+}
+
+.contact-form input,
+.contact-form textarea {
+  padding: 0 8px 8px 0;
+  margin-bottom: 16px;
+}
+
+.submit-button {
+  background-color: white;
+  color: blue;
+  cursor: pointer;
+  padding: 10px;
+  border: none;
+  border-radius: 1rem;
+  width: 100%;
+}
+
+.submit-button:hover {
+  background-color: darkblue;
+  color: aliceblue;
+}
+
 
 footer .top .pages {
   display: flex;
   flex-direction: row;
+  
 }
 
 footer .top .pages ul {
