--- a/WebApp/client/src/components/HomeComponents/contact/contact.css
+++ b/WebApp/client/src/components/HomeComponents/contact/contact.css
@@ -48,7 +48,9 @@ footer .info {
   align-items: center;
   justify-content: space-between;
   background: rgb(29, 29, 29);
-  padding-right: 10px;
+  padding-right: 100px;
+  padding-left: 80px;
+  color: aliceblue;
 }
 
 footer .info .legal {
@@ -74,13 +76,14 @@ footer .social i {
   font-size: 1.4rem;
   margin: 2px 8px;
   cursor: pointer;
+   height: 4px;
 }
 
 footer .social:before {
   position: absolute;
   content: "";
   width: 90%;
-  height: 1px;
+  height: 4px;
   background: rgba(255, 255, 255, 0.192);
   top: 0;
   left: 50%;
