--- a/WebApp/client/src/components/SideNavbar/sideNavbar.css
+++ b/WebApp/client/src/components/SideNavbar/sideNavbar.css
@@ -1,14 +1,23 @@
-.slide-enter {
-  transform: translateX(-100%);
+.sidebar-style {
+  flex: 1;
+  width: 250px; /* Width of the sidebar */
+  height: 100vh; /* Height of the sidebar */
+  position: absolute; /* Make it stick to the left */
+  z-index: 1; /* Stay on top */
+  top: 0; /* Stay at the top */
+  left: 0;
+  background-color: #ffffff; /* Black */
+  overflow-y: hidden; /* Disable horizontal scroll */
+  padding-top: 20px; /* Place content 20px from the top */
+  transition: 0.5s; /* 0.5 second transition effect to slide in the sidebar */
+  animation: slideInLeft 0.5s forwards;
 }
-.slide-enter-active {
-  transform: translateX(0);
-  transition: transform 300ms;
-}
-.slide-exit {
-  transform: translateX(0);
-}
-.slide-exit-active {
-  transform: translateX(-100%);
-  transition: transform 300ms;
+
+@keyframes slideInLeft {
+  0% {
+    transform: translateX(-100%);
+  }
+  100% {
+    transform: translateX(0);
+  }
 }
