--- a/WebApp/client/src/pages/auth/Register/RegisterStyle.css
+++ b/WebApp/client/src/pages/auth/Register/RegisterStyle.css
@@ -1,15 +1,38 @@
+/* RegisterStyle.css */
+
+
 .left-container {
-    width: 100%;
-    max-width: 400px;
-    padding: 20px;
-    background-color: rgb(38, 70, 99);
-    border-radius: 10px;
-    margin: 0 auto;
-    
-  }
+  width: 100%;
+  max-width: 400px;
+  padding: 20px;
+  background-color: rgb(38, 70, 99);
+  border-radius: 10px;
+  display: flex;
+  margin-left: 11%;
+}
+
+.register-form-container {
+  width: 100%;
   
-  @media (min-width: 1000px) {
-    .left-container {
-      width: 50%;
-    }
+}
+
+.register-button {
+  width: 100%;
+}
+
+.already-have-account {
+  margin-top: 10px;
+  text-align: center;
+}
+
+.already-have-account a {
+  color: #1890ff;
+}
+
+
+@media (min-width: 1000px) {
+  .left-container {
+    width: 50%;
+    margin-left: 11%;
   }
+}
