--- a/WebApp/client/src/index.css
+++ b/WebApp/client/src/index.css
@@ -38,24 +38,44 @@ code {
   }
 }
 
-/* RegisterPage.css */
-.register-container {
+/* AuthLayout.css */
+.main-container {
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  flex:2;
+  flex-direction: row;
   height: 100vh;
 }
 
-@media (min-width: 1000px) {
-  .register-container {
-    flex-direction: row;
-    justify-content: space-between;
-  }
+.page-container {
+  width: 50%;
+  display: flex;
+  flex:1;
+  justify-content: center;
+  align-items: center;
+ 
+}
+
+.auth-layout {
+  width: 50%;
+  flex:1;
+  padding: 20px 20px 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center; /* Add this line */
 }
 
 @media (max-width: 999px) {
-  .register-container > :last-child {
+  .main-container {
+    flex-direction: raw;
+    align-items: center;
+  }
+
+  .page-container,
+  .auth-layout {
+    width: 100%;
+  }
+
+  .auth-layout {
     display: none;
   }
 }
