--- a/WebApp/client/src/pages/auth/AuthLayout.css
+++ b/WebApp/client/src/pages/auth/AuthLayout.css
@@ -1,14 +1,12 @@
 .carousel-container {
-    display: flex;
-    flex-direction: column;
-    width: 100%;
-    margin: 10px;
-    border-radius: 10px; /* Add this line */
-    overflow: hidden; /* Add this line */
-  }
-  
+  width: 100%;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
   @media (min-width: 1000px) {
     .carousel-container {
-      width: 50%;
+      width: 100%;
+      height: 100%;
     }
   }
