--- a/WebApp/client/src/components/SavedTemplates/Card.css
+++ b/WebApp/client/src/components/SavedTemplates/Card.css
@@ -5,6 +5,7 @@
   box-shadow: 0 4px 6px 0 hsla(0, 0%, 0%, 0.2);
   overflow: hidden;
   margin: 10px 5px;
+  cursor: pointer;
 }
 
 @media (min-width: 768px) {
@@ -16,6 +17,7 @@
 .card-flex {
   display: flex;
   flex-direction: column;
+  padding-bottom: 5px;
 }
 
 @media (min-width: 768px) {
