--- a/WebApp/client/src/pages/auth/Register/RegisterStyle.css
+++ b/WebApp/client/src/pages/auth/Register/RegisterStyle.css
@@ -1,21 +1,50 @@
 /* RegisterStyle.css */
 
+.register-page {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 
 .left-container {
   align-items: center;
   justify-content: center;
+  display: flex;
+  flex-direction: column;
+  border: 1.2px solid rgb(189 189 189);
+  padding: 3%;
+  border-radius: 12px;
+  width: 800px;
 }
+
 .logo-img {
- width: 150px;
-} 
-.logo{
+  width: 150px;
+}
+.logo {
   align-items: center;
   margin-bottom: 20px;
-
 }
 .register-form-container {
   width: 100%;
-  
+}
+
+.register-button1 {
+  width: 100%;
+  margin-bottom: 10px;
+}
+
+.register-button2 {
+  width: 100%;
+  margin-bottom: 10px;
+  background-color: white !important;
+  border: 1px solid rgb(189 189 189);
+  color: black;
+}
+
+.register-button2:hover {
+  color: black !important;
 }
 
 .register-button {
@@ -31,9 +60,35 @@
   color: #1890ff;
 }
 
+.register-form-container {
+  width: 100%;
+}
 
 @media (min-width: 1000px) {
   .left-container {
-    width: 50%;
+    width: 55%;
   }
+}
+
+.form-header h3 {
+  text-align: center;
+}
+
+.form-header p {
+  text-align: center;
+  font-size: 14px;
+}
+
+.register-form-container label {
+  color: #65676b;
+}
+.csi-div {
+  display: inline-block;
+  margin-right: 20px;
+}
+
+.container-sign-in {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
