--- a/WebApp/client/src/components/SavedTemplates/Card.css
+++ b/WebApp/client/src/components/SavedTemplates/Card.css
@@ -1,4 +1,5 @@
 .card-container {
+  position: relative;
   width: 200px;
   background-color: white;
   border-radius: 10px;
@@ -68,4 +69,23 @@
 .dateText {
   font-size: 15px;
   color: black;
+}
+
+.edit-icon,
+.delete-icon {
+  position: absolute;
+  cursor: pointer;
+  color: #555252;
+}
+
+.edit-icon {
+  top: 12px;
+  right: 8px;
+  font-size: 20px;
+}
+
+.delete-icon {
+  bottom: 13px;
+  right: 8px;
+  font-size: 20px;
 }
