--- a/WebApp/client/src/components/SavedTemplates/SavedTemplatesWeb.css
+++ b/WebApp/client/src/components/SavedTemplates/SavedTemplatesWeb.css
@@ -13,7 +13,8 @@
 }
 .search-bar {
   flex-grow: 1;
-  padding: 10px;
+  padding: 5px;
+  padding-left: 10px;
   margin-right: 10px;
   border-radius: 500px;
   border: 1px solid #ccc;
