--- a/WebApp/client/src/components/SavedTemplates/TemplateDetails.css
+++ b/WebApp/client/src/components/SavedTemplates/TemplateDetails.css
@@ -31,11 +31,17 @@
 .templateName-text {
   font-weight: 500;
   font-size: 17px;
+  margin-top: -20px;
+  margin-left: -60px;
 }
 
 p {
   margin: 0;
   font-size: 13px;
+}
+
+.backBtn {
+  margin-top: -13px;
 }
 
 .div-02 {
