--- a/WebApp/client/src/components/SavedTemplates/SavedTemplatesWeb.css
+++ b/WebApp/client/src/components/SavedTemplates/SavedTemplatesWeb.css
@@ -7,7 +7,8 @@
 }
 
 .backBtnDiv {
-  margin-left: 15px;
+  margin-left: 20px;
+  margin-top: 10px;
 }
 @media (min-width: 768px) {
   .card-image {
