--- a/WebApp/client/src/pages/Admin/AdminDashboard.css
+++ b/WebApp/client/src/pages/Admin/AdminDashboard.css
@@ -43,3 +43,10 @@
     padding: 0 30px;
 }
 
+.loader-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
