--- a/WebApp/client/src/pages/Admin/AdminDashboard.css
+++ b/WebApp/client/src/pages/Admin/AdminDashboard.css
@@ -6,6 +6,14 @@
     flex-direction: row;
     justify-content: space-between;
 }
+.admin-dashboard-header-center
+{
+    color: #aaaaaa;
+    position: absolute;
+    align-items: center;
+    margin-left: 37%;
+    margin-top: 0.7%;
+}
 
 .image-admin {
     height: 60px;
