--- a/WebApp/client/src/pages/Admin/AdminDashboard.css
+++ b/WebApp/client/src/pages/Admin/AdminDashboard.css
@@ -199,3 +199,27 @@
     line-height: normal;
     margin-top: -10px;
 }
+
+.legend-color {
+    width: 20px;
+    height: 20px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+
+.legend-item {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    margin-bottom: 10px;
+}
+
+.chart-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 370px;
+    flex-direction: row;
+    gap: 60px;
+    margin-bottom: 20px;
+}
