--- a/WebApp/client/src/pages/Admin/AdminDashboard.css
+++ b/WebApp/client/src/pages/Admin/AdminDashboard.css
@@ -2,17 +2,10 @@
     width: 100%;
     height: 80px;
     padding: 10px 30px;
+    margin-top: 20px;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
-}
-.admin-dashboard-header-center
-{
-    color: #aaaaaa;
-    position: absolute;
-    align-items: center;
-    margin-left: 37%;
-    margin-top: 0.7%;
+    justify-content:flex-end;
 }
 
 .image-admin {
@@ -20,7 +13,7 @@
 }
 
 .avatar-container {
-    margin-top: 10px;
+    margin-top: 5px;
     cursor: pointer;
 }
 
@@ -218,8 +211,70 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 370px;
+    height: 280px;
     flex-direction: row;
     gap: 60px;
     margin-bottom: 20px;
 }
+
+/* Side Bar */
+
+.Admin_DashboardContainer {
+    width: 100vw;
+    height: 100vh;
+    
+    overflow-x: hidden;
+}
+
+.Admin_SideMenuAndPageContent {
+    display: flex;
+    flex: 1;
+    justify-content: flex-start;
+    align-items: flex-start;
+    background-color: #f4f3f3;
+}
+.Admin_SideMenu {
+    background-color: white;
+    height: calc(100vh - 30px);
+    width: fit-content;
+    margin: 15px 0 15px 15px;
+    padding: 0 0 0 0;
+    border-radius: 11px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.admin_sidebar_logo{
+    width: 136px;
+    padding: 34px 0 20px 0;
+}
+
+.Admin_PageContent {
+    flex: 1;
+    height: 100%;
+    overflow-x: hidden;
+    overflow-y: auto;
+    margin-left: 270px;
+    width: calc(100% - 271px);
+}
+
+.admin_sidebar_container {
+    position: fixed;
+}
+
+/* Nav Bar */
+
+.Admin__NavBar {
+    display: flex;
+    justify-content: flex-end;
+    gap: 25px;
+    align-items: center;
+    height: 51px;
+    background-color: #fff;
+    border-radius: 11px;
+    margin: 15px;
+    padding: 0 15px;
+}
+
+
