--- a/WebApp/client/src/components/SavedTemplates/Card.css
+++ b/WebApp/client/src/components/SavedTemplates/Card.css
@@ -27,6 +27,7 @@
   }
 }
 .card-image-container {
+  position: relative;
   flex-shrink: 0;
   display: flex;
   align-items: center;
@@ -34,15 +35,40 @@
   padding-left: 10px;
 }
 
+.image-loader {
+  position: absolute;
+  width: 4rem;
+  height: 4rem;
+  border: 3px solid #f3f3f3;
+  border-top: 3px solid #3498db;
+  border-radius: 50%;
+  animation: spin 1s linear infinite;
+}
+@keyframes spin {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
 .card-image {
   width: 4rem;
   height: 4rem;
   object-fit: cover;
   margin-top: 10px;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.card-image.loaded {
+  opacity: 1;
 }
 
 @media (min-width: 768px) {
-  .card-image {
+  .card-image,
+  .image-loader {
     width: 5rem;
     height: 5rem;
   }
